src/sections/Hero.module.css
.hero::before {
    content: '';
    position: absolute;
    inset: 0;
    background: radial-gradient(ellipse at 70% 35%, rgba(139, 0, 0, .22) 0%, transparent 60%);
    pointer-events: none;
}

.hero {
    min-height: 100vh;
    background: var(--black);
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    padding: 100px 80px 0;
    gap: 40px;
    position: relative;
}

.textCol {
    position: relative;
    text-align: left;
    /* z-index: 1; */
}

.eyebrow {
    font-family: var(--heading);
    font-size: 11px;
    font-weight: 600;
    letter-spacing: .28em;
    text-transform: uppercase;
    color: var(--red);
    margin-bottom: 14px;
}

.name {
    font-family: var(--heading);
    font-size: clamp(64px, 9vw, 120px);
    font-weight: 900;
    line-height: .9;
    text-transform: uppercase;
    margin-bottom: 28px;
}

.name span {
    color: var(--red);
}

.desc1 {
    font-size: 15px;
    line-height: 1.75;
    color: #aaa;
    max-width: 400px;
    margin-bottom: 10px;
}

.desc2 {
    font-size: 14px;
    line-height: 1.75;
    color: #666;
    max-width: 400px;
}

.buttons{
    display: flex;
    gap: 12px;
    margin-top: 36px;
    flex-wrap: wrap;
}

.imageCol {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    position: relative;
    z-index: 1;
    overflow: hidden;
}

.image {
    position: relative;
    z-index: 1;
    width: 100%;
    max-width: 420px;
    border-bottom: 1px solid var(--border);
    /* -webkit-mask-image: linear-gradient(to bottom, black 60%, transparent 100%); */
    /* mask-image: linear-gradient(to bottom, black 60%, transparent 100%); */
    /* filter: drop-shadow(0 0 40px rgba(180, 0, 0, .4)); */
}

/* .image::before {
    content: '';
    position: absolute;
    bottom: 0;
    width: 360px;
    height: 360px;
    background: radial-gradient(circle, rgba(139, 0, 0, .45) 0%, transparent 70%);
    border-radius: 50%;
} */

